--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,13 @@
     "axios": "^1.2.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "prisma": "^4.11.0",
     "ts-node-dev": "^2.0.0",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "@prisma/client": "^4.9.0",
-    "prisma": "^4.9.0"
+    "dotenv": "^16.0.3"
   }
 }
